# jsonschemacodegen

./: LICENSE  MANIFEST.in  README.md  generate.py  main.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-faker.txt  requirements.txt  setup.py
docs/: ARCHITECTURE.md  EXAMPLES.md  MODULE_GENERATOR.md  QUICKSTART.md
examples/schemas/: 01_user.json  02_product.json  03_order.json  04_api_response.json  05_blog_post.json  06_config.json  07_invoice.json  08_event.json  09_workflow.json  10_notification.json  11_healthcare_patient.json  12_iot_device.json  13_graphql_schema.json  14_kubernetes_deployment.json  15_financial_transaction.json  16_media_library.json  17_survey.json  18_cicd_pipeline.json  19_ml_model.json  20_api_gateway.json  21_game_entity.json  22_openapi_spec.json
examples/schemas/common/: definitions.json
examples/schemas/definitions/: common.json
jsonschemacodegen/: __init__.py  __main__.py  cli.py  module_generator.py
jsonschemacodegen/core/: __init__.py  reference_resolver.py  schema_parser.py  schema_processor.py  type_mapper.py  validator.py
jsonschemacodegen/generators/: __init__.py  class_generator.py  code_generator.py  pydantic_generator.py  sample_generator.py
jsonschemacodegen/models/: __init__.py  base.py
jsonschemacodegen/utils/: __init__.py  file_utils.py  json_utils.py  naming.py
tests/: __init__.py  test_basic.py
