# JsonSchemaCodeGen - Python Project Configuration
#
# Copyright © 2025-2030, All Rights Reserved
# Ashutosh Sinha
# Email: ajsinha@gmail.com
#
# LEGAL NOTICE:
# This software is proprietary and confidential. Unauthorized copying,
# distribution, modification, or use is strictly prohibited without
# explicit written permission from the copyright holder.
#
# Patent Pending: Certain implementations may be subject to patent applications.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonschemacodegen"
version = "1.0.0"
description = "Commercial Grade JSON Schema to Python Code Generator"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Ashutosh Sinha", email = "ajsinha@gmail.com"}
]
maintainers = [
    {name = "Ashutosh Sinha", email = "ajsinha@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "json-schema",
    "code-generator",
    "pydantic",
    "dataclass",
    "validation",
    "schema",
    "python",
    "typing",
]
dependencies = []

[project.optional-dependencies]
faker = ["faker>=18.0.0"]
requests = ["requests>=2.28.0"]
jsonschema = ["jsonschema>=4.17.0"]
pydantic = ["pydantic>=2.0.0"]
all = [
    "faker>=18.0.0",
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
jsonschemacodegen = "jsonschemacodegen.__main__:main"

[project.urls]
Documentation = "https://github.com/ajsinha/jsonschemacodegen#readme"
Source = "https://github.com/ajsinha/jsonschemacodegen"
Issues = "https://github.com/ajsinha/jsonschemacodegen/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
jsonschemacodegen = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["jsonschemacodegen"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
